@@ -1,3 +1,8 @@
+2023-08-17 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/pic14/glue.c,
+	* src/pic16/glue.c: moved no_assemble into options
+
 2023-08-17 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/shifts2.c.in,
